2010-08-11  Leo Yang  <leo.yang@torchmobile.com.cn>

Reviewed by Geoffrey Garen.

        Date("") should be an invalid date. For IE, Firefox and Chrome, Date("") is invalid date,
        which means isNaN(new Date("")) should return true.
        https://bugs.webkit.org/show_bug.cgi?id=43793
        Tests: fast/js/date-constructor.html

        * runtime/JSGlobalData.cpp:
        (JSC::JSGlobalData::resetDateCache):
2010-08-11  Leo Yang  <leo.yang@torchmobile.com.cn>

        Reviewed by Geoffrey Garen.

        Add isNaN(new Date("")) test to fast/js/script-tests/date-constructor.js.
        https://bugs.webkit.org/show_bug.cgi?id=43793

        * fast/js/date-constructor-expected.txt:
        * fast/js/script-tests/date-constructor.js:

Canonical link: https://commits.webkit.org/56001@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65201 268f45cc-cd09-0410-ab3c-d52691b4dbfc